front/assets/styles/slideout.less
body {
  width: 100%;
  height: 100%;
}

.side-menu-ad {
  background: #eee;
  height: 140px;
  width: 110%;
  margin-left: -10px;
  margin-top: 60px;
}
.side-menu-ad img {
  height: 100%;
  padding: 5px;
  float: left;
}

.side-menu-ad .side-menu-ad-text {
  font-size: 13px;
  padding-left: 5px;
  padding-top: 10px;
  float: left;
  width: 100px;
}

.side-menu-ad .side-menu-ad-text > p {
  color: #666;
  margin-bottom: 14px;
}

.slideout-menu {
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  z-index: 0;
  width: @slideout-menu-width;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}

.slideout-panel {
  position:relative;
  background: white;
  border-left: 1px solid @grey-border;
  z-index: 1;
  will-change: transform;
}

.slideout-open,
.slideout-open body,
.slideout-open .slideout-panel {
  overflow: hidden;
}

.slideout-open .slideout-menu {
  display: block;
}

@media screen and (min-width: @breakpoint-narrow) {
  .slideout-panel {
    padding-left: @slideout-menu-width;
  }

  .slideout-menu {
    display: block;
    z-index: 5;
  }

  .side-menu-toggle.hamburger {
    display: none;
  }
}

#top-bar-header {
  display: none;
}

@media screen and (max-width: @breakpoint-narrow) {
  #top-bar-header {
    display: block;
  }
}

#side-menu h1.main-header {
  display: block;
}

@media screen and (max-width: @breakpoint-narrow) {
  #side-menu h1.main-header {
    display: none;
  }
}

